[gd_scene load_steps=3 format=3 uid="uid://dx25w13rsr5xr"]

[ext_resource type="Script" uid="uid://h3g5mxur20is" path="res://Scripts/Menu/settings_menu.gd" id="1_051s4"]
[ext_resource type="Texture2D" uid="uid://cnccbg4ghss2g" path="res://Assets/Textures/UI/SettingsBackground.png" id="1_uit7r"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -608.0
offset_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_051s4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(272, 192)
scale = Vector2(6, 6)
texture = ExtResource("1_uit7r")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_bottom = 112.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "X"

[node name="Settings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -55.5
offset_right = 149.0
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Language" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="Settings/Language"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Language: "

[node name="Language" type="OptionButton" parent="Settings/Language"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Български"
popup/item_1/id = 1

[node name="Volume" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="Settings/Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Volume: "

[node name="HSlider" type="HSlider" parent="Settings/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Mods" type="Button" parent="Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
disabled = true
text = "Mods"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="Settings/Language/Language" to="." method="_on_language_selected"]
[connection signal="value_changed" from="Settings/Volume/HSlider" to="." method="_on_volume_changed"]
[connection signal="pressed" from="Settings/Mods" to="." method="_on_mods_pressed"]
